--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -2,3 +2,10 @@
     background-color: #082E66;
     color: #89B9FF;
 }
+
+@media (max-width:640px) {
+    .active {
+        color: #89B9FF;
+        background-color: transparent;
+    }
+}
